@@ -1,0 +1,13 @@
+/*****************************************************************************\
+ *  $Id: cerebro_updown.c,v 1.1 2005-04-25 21:39:27 achu Exp $
+\*****************************************************************************/
+
+#if HAVE_CONFIG_H
+#include "config.h"
+#endif /* HAVE_CONFIG_H */
+
+#include <stdio.h>
+#include <stdlib.h>
+#if STDC_HEADERS
+#include <string.h>
+#endif /* STDC_HEADERS */
