@@ -1,0 +1,8 @@
+/*****************************************************************************\
+ *  $Id: cerebro_updown.h,v 1.1 2005-04-25 21:39:27 achu Exp $
+\*****************************************************************************/
+
+#ifndef _CEREBRO_UPDOWN_H
+#define _CEREBRO_UPDOWN_H
+
+#endif /* _CEREBRO_UPDOWN_H */
